Bug 1736368 - Use consistent min-heights for moz-tree-row and tree column headers. r=desktop-theme-reviewers,dao
I couldn't reproduce this neither in Windows 10 nor 11 (the tree columns are
small, but that happens both in light and dark mode).

It is true, however, that the col pickers are too small generally on all
platforms as well, so this seems reasonable.

Differential Revision: https://phabricator.services.mozilla.com/D128751

--- a/toolkit/themes/shared/tree.inc.css
+++ b/toolkit/themes/shared/tree.inc.css
@@ -23,6 +23,11 @@ tree {
 
 treechildren::-moz-tree-row {
   border: 1px solid transparent;
+}
+
+treechildren::-moz-tree-row,
+treecol,
+treecolpicker {
   min-height: 24px;
   height: 1.3em;
 }
